# pawpad

./: .gitignore  README.md  pyproject.toml  web_ui.py
examples/: README.md
examples/basic/: demo.sh  original.txt
examples/crypto/: contract.txt  demo.sh  simple_demo.sh  tampering_demo.sh
examples/messages/: cover.txt  demo.sh
src/pawpad/: __init__.py  cli.py  encoder.py
templates/: index.html
templates/results/: decode_result.html  encode_result.html  extract_result.html  generate_result.html  hide_result.html  reveal_result.html  sign_result.html  verify_result.html
