[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pawpad"
version = "0.1.0"
description = "A tool for encoding fingerprints in text using Unicode variation selectors"
authors = [{ name = "User", email = "user@example.com" }]
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "cryptography>=41.0.0",
    "fastapi>=0.115.14",
    "uvicorn>=0.33.0",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.20",
]
requires-python = ">=3.8"

[project.scripts]
pawpad = "pawpad.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pawpad"]

[tool.hatch.build.targets.sdist]
include = ["src/pawpad"]

[tool.hatch.envs.default]
dependencies = ["pytest", "black", "isort"]
